gitops/websites/bus-display/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deploy
  namespace: bus-display
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bus-display-web
  template:
    metadata:
      labels:
        app: bus-display-web
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: web
          image: registry.rupan.dev/apps/bus-display@sha256:ea0f246230e6851f9685f237d80e3d4a11cab4a425fdb3caa7a44aa836542fd8  # yamllint disable-line rule:line-length
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: calendar-secret
              mountPath: /secrets/calendar
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
      volumes:
        - name: tmp
          emptyDir: {}
        - name: calendar-secret
          secret:
            secretName: bus-display-calendar
